--- a/app/views/reu_program/invoices/new.haml
+++ b/app/views/reu_program/invoices/new.haml
@@ -1,7 +1,9 @@
 .row
   .col-2
   .col-8
-    %h2 Fill out Invoice Information
+    %h2 Invoice Details
+    %small Fill out this information in order to recieve a invoice to your billing department
+    %hr
     = render 'form'
   .col-2
 
