--- a/app/views/reu_program/invoices/edit.haml
+++ b/app/views/reu_program/invoices/edit.haml
@@ -1,7 +1,8 @@
 .row
   .col-2
   .col-8
-    %h2 Update Invoice Information
+    %h2 Edit Invoice Details
+    %hr
     = render 'form'
   .col-2
 
