updates for ires

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -5,6 +5,8 @@
   .col-md-5
     - if Snippet[:home_page_image]
       = image_tag(url_for(Snippet[:home_page_image]), class: 'pull-left img-responsive center-block', style: 'max-width: 100%;')
+    - elsif Apartment::Tenant.current == 'ires'
+      = image_tag 'Stockholm_resized.jpg'
     - else
       %strong No Image selected, please select a image in to snippets section of the Admin portal.
   .col-md-7
@@ -32,15 +34,15 @@
           = link_to "Finish Application", application_path, class: "btn btn-lg btn-success"
         - else
           = link_to "Apply Now", new_user_registration_path, class: "btn btn-lg btn-success"
-- else
-  .row
-    .col-md-12
-      %h3.deadline.text-center
-        Applications will be available on #{format_date(Setting[:application_start], 'Missing Start Date')} for the #{Setting[:program_start_date]&.year || 'Missing Program Start Date'} Program. Applications will be due on #{format_date(Setting[:application_deadline], 'Missing Deadline Date')} and Decisions sent to applicants by #{format_date(Setting[:notification_date], 'Missing Notification Date')}.
-  .row.mt-4.mb-4
-    .col
-      %h3 Program Highlights
-      = sanitize(Snippet[:program_highlights])
+
+.row
+  .col-md-12
+    %h3.deadline.text-center
+      Applications will be available on #{format_date(Setting[:application_start], 'Missing Start Date')} for the #{Setting[:program_start_date]&.year || 'Missing Program Start Date'} Program. Applications will be due on #{format_date(Setting[:application_deadline], 'Missing Deadline Date')} and Decisions sent to applicants by #{format_date(Setting[:notification_date], 'Missing Notification Date')}.
+.row.mt-4.mb-4
+  .col
+    %h3 Program Highlights
+    = sanitize(Snippet[:program_highlights])
 
   .col
     %h3 Eligibility Requirements
@@ -53,4 +55,7 @@
 .row.mt-4
   .col
     %h3 Acknowledgment Of Funding Sources
-    = Snippet[:Acknowledgment_of_funding_sources]
+    - ack_text =  Snippet[:Acknowledgment_of_funding_sources]
+    = ack_text
+    - if ack_text == 'National Science Foundation'
+      = image_tag 'NSF.png'
