drop the M from com for sending email

--- a/app/views/grants/new_program.haml
+++ b/app/views/grants/new_program.haml
@@ -13,7 +13,7 @@
               - @grant.errors.full_messages.each do |message|
                 %li= message
         = f.input :program_title, placeholder: "Your Program's Title"
-        = f.input :subdomain, placeholder: 'This will display as "yoursubdomain.reumanager.com"'
+        = f.input :subdomain, placeholder: 'This will display as "yoursubdomain.reumanager.co"'
         = f.input :admin_first_name, placeholder: "Your first name"
         = f.input :admin_last_name, placeholder: "Your last name"
         = f.input :admin_password, placeholder: "Your password"
