--- a/app/views/recommender_forms/show_recommenders.haml
+++ b/app/views/recommender_forms/show_recommenders.haml
@@ -15,6 +15,7 @@
   .form-data{ attrs }
 
   #customForm
+  %p.instructions Select #{link_to('Status', status_path)} from the top menu to finalize your application
 
   - if Rails.env.development?
     %hr
