reduce image size for mrsec

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -8,7 +8,7 @@
     - elsif Apartment::Tenant.current == 'ires'
       = image_tag 'Stockholm_resized.jpg'
     - elsif Apartment::Tenant.current == 'mrsec'
-      = image_tag 'IMG_4299.jpeg'
+      = image_tag 'IMG_4299.jpeg', style: 'width: 400px; height: auto;'
     - else
       %strong No Image selected, please select a image in to snippets section of the Admin portal.
   .col-md-7
