--- a/app/views/applications/show_application.haml
+++ b/app/views/applications/show_application.haml
@@ -15,6 +15,7 @@
   .form-data{ attrs }
 
   #customForm
+  %p.instructions Be sure to Save Application before navigating away from the current page
   %p.instructions Select #{link_to("Recommenders", recommenders_path)} from the top menu to move to the next stage
 
   - if Rails.env.development?
