hide and redirect the application and recommender pages after application is submitted

--- a/app/views/applications/status.haml
+++ b/app/views/applications/status.haml
@@ -21,7 +21,7 @@
     - when 'withdrawn'
       %p.m-0 You have withdrawn your application. If you want your applcation to be considered please restart your account and complete your application.
     - when 'accepted'
-      %p.m-0 Congradulations you have been accepted. Please look for more communication from us about the details of the program.
+      %p.m-0 Congratulations you have been accepted. Please look for more communication from us about the details of the program.
     - when 'rejected'
       %p.m-0 We are sorry but you have not been accepted into the program.
 
