--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -7,7 +7,7 @@
       = link_to "Welcome", root_path, class: class_names
       - unless params[:token].present?
         - if user_signed_in?
-          - unless current_application&.withdrawn?
+          - unless (current_application&.withdrawn? || current_application&.completed? || current_application&.accepted? || current_application&.rejected?)
             = link_to 'Application', application_path, class: class_names
             = link_to 'Recommenders', recommenders_path, class: class_names
           = link_to 'Status', status_path, class: class_names
