in this code we added a description column to the section table. It also adds the section description to the section edit views and the application show view.

--- a/app/views/reu_program/application_forms/_edit_form.haml
+++ b/app/views/reu_program/application_forms/_edit_form.haml
@@ -18,6 +18,7 @@
     %thead
       %tr
         %th Title
+        %th Description
         %th Repeating
         %th Required Count
         %th.text-right Actions
@@ -26,6 +27,7 @@
         - id = "reorderFields#{section.id}"
         %tr
           %td= section.title
+          %td= section.description
           %td= section.repeating ? 'Yes' : 'No'
           %td= section.repeating ? section.count : ''
           %td.text-right
