--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -1,8 +1,7 @@
 .border-bottom.shadow.navbar.main-nav
   .container.d-flex.flex-column.flex-md-row.align-items-center
-    %h3.my-0.mr-md-auto.font-weight-normal
-      = link_to app_title, root_path, class: 'navbar-brand text-dark', id: 'ar-brand'
-    %nav.my-2.my-md-0.mr-md-3
+    %img(src="/assets/img/colors/blue3/logo.png")
+    %nav.my-2.my-md-0.mr-md-2.d-flex.flex-md-row.align-items-center.flex-wrap.justify-content-center
       - class_names = 'p-2 text-dark'
       = link_to "Welcome", root_path, class: class_names
       - unless params[:token].present?
