this commit restyles the first portion of the welcome page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *cc= require css/style-blue3
  *cc= require css/width-full
  *cc= require cms
- *cc= require bootstrap-datepicker3
+ *cc= require bootstra*ccp-datepicker3
  *= require b4app
  */
 
