--- a/app/assets/stylesheets/b4app.scss
+++ b/app/assets/stylesheets/b4app.scss
@@ -9,6 +9,8 @@ $primary-color: #6f95dc;
 @import "app/marketing";
 @import "app/tours";
 @import "app/pricing";
+@import "app/welcome";
+
 
 body {
   color: #666;
