--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,7 +1,7 @@
 -# stylesheet for this page is welcome
 .container.mt-5
   .row.mb-5.mx-auto
-    .col-md-8
+    .col-lg-8
       .container-fluid.mr-lg-n5.mr-sm-0
         - if Snippet[:home_page_image]
           = image_tag(url_for(Snippet[:home_page_image]), class: 'pull-left img-responsive center-block', style: 'max-width: 100%;')
@@ -13,7 +13,7 @@
           = image_tag 'Group_picture.jpg', style: 'width: 400px; height: auto;'
         - else
           %strong No Image selected, please select a image in to snippets section of the Admin portal.
-    .col-md-4
+    .col-lg-4
       .container.ml-lg-n5.ml-sm-0.transparent-background-container
         - if expired?
           %h2.deadline.text-center.mt-5
@@ -32,8 +32,8 @@
                 = link_to "Finish Application", application_path, class: "btn btn-lg btn-success"
               - else
                 = link_to "Apply Now", new_user_registration_path, class: "btn btn-lg btn-success"
-          %h6.deadline.text-center.pb-3
-            Applications will be available on #{format_date(Setting[:application_start], 'Missing Start Date')} for the #{Setting[:program_start_date]&.year || 'Missing Program Start Date'} Program. Applications will be due on #{format_date(Setting[:application_deadline], 'Missing Deadline Date')} and Decisions sent to applicants by #{format_date(Setting[:notification_date], 'Missing Notification Date')}.
+          %p.deadline.text-center.pb-3
+            Applications will be available on <b>#{format_date(Setting[:application_start], 'Missing Start Date')} </b>for the #{Setting[:program_start_date]&.year || 'Missing Program Start Date'} Program.<br/>Applications will be due on <b>#{format_date(Setting[:application_deadline], 'Missing Deadline Date')}</b> and decisions sent to applicants by <b>#{format_date(Setting[:notification_date], 'Missing Notification Date')}.</b>
    
 .row.px-5
   .col-md-12
