--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,18 +9,17 @@
   / Preloader
   %body
     = render 'layouts/navbar'
-    .container
-      -# = render 'layouts/header'
-      .row.mt-3.mb-2#flash
-        .col
-          - if flash[:notice]
-            .alert.alert-info#notice= flash[:notice]
-          - if flash[:success]
-            .alert.alert-success#success= flash[:success]
-          - if flash[:alert]
-            .alert.alert-warning#alert= flash[:alert]
-          - if flash[:error]
-            .alert.alert-warning#error= flash[:error]
-      = yield
+    = render 'layouts/header'
+    .row.mt-3.mb-2#flash
+      .col
+        - if flash[:notice]
+          .alert.alert-info#notice= flash[:notice]
+        - if flash[:success]
+          .alert.alert-success#success= flash[:success]
+        - if flash[:alert]
+          .alert.alert-warning#alert= flash[:alert]
+        - if flash[:error]
+          .alert.alert-warning#error= flash[:error]
+    = yield
 
     = render '/layouts/footer'
