This commit adds styling for the index page cards

--- a/app/assets/stylesheets/app/welcome.scss
+++ b/app/assets/stylesheets/app/welcome.scss
@@ -9,3 +9,7 @@ $grid-float-breakpoint: "992px";
         background-color: white;
     }
   }
+
+.homepage-card{
+    box-shadow: 15px -15px #9BBCEE;
+}
