when this is commited as an admin I can click on the support button on the navbar and I will be redirected to a support page

--- a/app/views/layouts/_marketing_footer.haml
+++ b/app/views/layouts/_marketing_footer.haml
@@ -7,7 +7,7 @@
         = link_to 'Pricing & Signup', pricing_path
         = link_to 'Begin Signup', create_grant_path
         = link_to 'Demo', demo_path
-        = link_to 'Support', 'https://github.com/notch8/reumanager'
+        = link_to 'Support', support_path
       .row.mt-3
         .col
           %p
