--- a/app/views/welcome/support.haml
+++ b/app/views/welcome/support.haml
@@ -1,1 +1,7 @@
-support
+.support
+    -#  .container.mt-4
+    -#    .d-flex.flex-column.align-items-center
+    -#     .card.w-75.mb-3
+    -#         .card-header
+    -#             %h3.card-title The Basics
+        
