--- a/app/views/applications/show_application.haml
+++ b/app/views/applications/show_application.haml
@@ -1,33 +1,35 @@
-%h1 Application
+.container
+  .col.mx-2
+    %h1 Application
 
-- if @form
-  :ruby
-    attrs = {
-      style: "display: none;",
-      data: {
-        schema: @form.json_schema,
-        data: @data.to_json,
-        path: application_path,
-        method: 'PATCH'
-      }
-    }
+    - if @form
+      :ruby
+        attrs = {
+          style: "display: none;",
+          data: {
+            schema: @form.json_schema,
+            data: @data.to_json,
+            path: application_path,
+            method: 'PATCH'
+          }
+        }
 
-  .form-data{ attrs }
+      .form-data{ attrs }
 
-  #customForm
-  %p.instructions Be sure to Save Application before navigating away from the current page
-  %p.instructions Select #{link_to("Recommenders", recommenders_path)} from the top menu to move to the next stage
+      #customForm
+      %p.instructions Be sure to Save Application before navigating away from the current page
+      %p.instructions Select #{link_to("Recommenders", recommenders_path)} from the top menu to move to the next stage
 
-  - if Rails.env.development?
-    %hr
-    %h3 this is only in dev
-    %pre(style="border: 1px solid black; background: lightgrey; padding: 10px; border-radius: 5px;")
-      = JSON.pretty_generate(attrs)
-      = "\n"
-      = JSON.pretty_generate(@data)
-      = "\n"
-      = @form.pretty_json_schema
-    %hr
-- else
-  .alert.alert-warning
-    %p There is no active form please alert the administrators.
+      - if Rails.env.development?
+        %hr
+        %h3 this is only in dev
+        %pre(style="border: 1px solid black; background: lightgrey; padding: 10px; border-radius: 5px;")
+          = JSON.pretty_generate(attrs)
+          = "\n"
+          = JSON.pretty_generate(@data)
+          = "\n"
+          = @form.pretty_json_schema
+        %hr
+    - else
+      .alert.alert-warning
+        %p There is no active form please alert the administrators.
