--- a/app/assets/stylesheets/b4admin.scss
+++ b/app/assets/stylesheets/b4admin.scss
@@ -1,6 +1,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 // .alert {
 //     width: 180px;
@@ -8,6 +9,9 @@
 //     padding: .75rem;
 //     text-align: center;
 // }
+* {
+    font-family: "Lato", sans-serif;
+  }
 
 .content-box.box-default {
     background-color: #f6f6f6;
